# format-number

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
src/: lib.rs  main.rs
