[package]
name = "format-number"
author = "James N."
description = "A simple command line tool to format your number into various other representations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version ="3.1.2", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
test-case = "1.2.3"
